--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        I'm Henry VIII, I am
+        Henry VIII of Tudor
     </head>
         <body>
+            <div>
+            <p><strong>Hobbies</strong></p>
+            <ol>
+                <li>Wrestling</li>
+                <li>Killing my wives</li>
+                <li>Exploring new lands</li>
+                <li>Admiring my calves</li>
+            </ol>
+            </div>
             <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmmrl4SQ18kKmoUVdUJUMFvkKd64SOmcc0Lok2_Xl9q9ZAFzls"
-            <p>Henry VIII, I am</p> 
-            <p>I am</p>
             </body>
 </html>
