Create personal website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        Henry VIII of Tudor
+        <link rel ="stylesheet" href ="styles.css"/>
     </head>
         <body>
-            <div>
+            <h1>Henry VIII of Tudor</h1>
             <p><strong>Hobbies</strong></p>
             <ol>
                 <li>Wrestling</li>
@@ -12,7 +12,6 @@
                 <li>Exploring new lands</li>
                 <li>Admiring my calves</li>
             </ol>
-            </div>
             <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmmrl4SQ18kKmoUVdUJUMFvkKd64SOmcc0Lok2_Xl9q9ZAFzls"
             </body>
 </html>
